--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r setup}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 ## Read in some data
@@ -42,5 +44,20 @@ check out `?read_csv()` for more information.
 litters_df = read_csv("./data/FAS_litters.csv", skip = 10, col_names = FALSE)
 ```
 
+## Other file formats
+
+Read in an excel file.
+
+```{r}
+mlb_df = read_excel("./data/mlb11.xlsx", range = "A1:F7")
+mlb_df
+```
+
+Read in an sas file.
+
+```{r}
+pulse_df = read_sas("./data/public_pulse_data.sas7bdat")
+pulse_df
+```
 
 
