--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -60,4 +60,16 @@ pulse_df = read_sas("./data/public_pulse_data.sas7bdat")
 pulse_df
 ```
 
+## Conparison with Base R
+
+what about `read.csv` ...?
+
+```{r}
+litters_base = read.csv("data/FAS_litters.csv")
+litters_readr = read_csv("data/FAS_litters.csv")
+
+litters_base
+litters_readr
+```
+
 
